# LLMManager

./: .bumpversion.cfg  .coveragerc  .gitallowed  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  ProjectStructure.md  README.md  bestehorn_llmmanager.py  extract_llm_manager.py  implementation_plan.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.bat  run_tests.py  setup.py  test_parsing.py  tox.ini
.claude/: settings.json
.claude/agents/: adversarial-verifier.md  best-practice-reviewer.md  ci-workflow-agent.md  code-merge-reviewer.md  dead-code-removal-agent.md  devops-iac-reviewer.md  doc-reviewer-agent.md  issue-housekeeping-agent.md  issue-intake-agent.md  issue-work-orchestrator.md  product-management-agent.md  security-reviewer.md  spec-author.md  spec-conductor.md  spec-implementer.md  spec-prompt-author-agent.md  spec-researcher.md  spec-review-agent.md  standards-reviewer.md  test-architect.md
.claude/commands/: git-commit.md  git-push.md  git-rebase.md  issues-work.md  run-ci.md  spec-implement.md  spec-new.md  spec-review.md  spec-tasks.md  sync-docs.md  test-coverage.md
.claude/hooks/: format-on-stop.sh  issue-loop-gate.sh  no-env-vars.sh  red-for-right-reason.sh  session-register.sh  spec-stop-gate.sh  spec-tdd-gate.sh
.claude/rules/: agent-state-convention.md  always-test-e2e.md  coding-standards.md  dependencies.md  design-principles.md  document-user-prompts.md  file-organization.md  issue-tracking.md  keep-git-clean.md  no-ai-attribution.md  no-cli-temp-variables.md  no-environment-vars.md  no-guessing.md  no-output-shortening.md  per-worktree-venv.md  post-activity.md  pre-work.md  project-specific.md  remote-ci-must-pass.md  tech-stack.md  testing.md  tests-must-not-fail.md  use-doc-mcp-servers.md  use-git-wrapper-scripts.md  use-lessons-learned.md  use-venv.md
.clinerules/: venv-only.md
.clinerules/workflows/: pre-commit-checks.md  test_automation.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.kiro/hooks/: lint-on-save.kiro.hook  post-implementation-ci.json  post-implementation-ci.kiro.hook  run-ci-workflow.kiro.hook  run-pre-commit-checks.json  run-pre-commit-checks.kiro.hook  sync-documentation.json  sync-documentation.kiro.hook  test-automation.json  test-automation.kiro.hook  test-coverage.json  test-coverage.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: coding-standards.md  dependencies.md  design-principles.md  file-organization.md  post-activity.md  pre-work.md  project-specific.md  tech-stack.md  testing.md
credentials/: README.md  github-pat.txt.template
docs/: AWS_DOCUMENTATION_CHANGES.md  Authentication_Documentation.md  CI_CONFIGURATION.md  CODECOV_SETUP.md  CRISManager_Documentation.md  CRIS_API_IMPLEMENTATION_PLAN.md  CRIS_JSON_Format.md  HowToExport.md  INFERENCE_PROFILE_TROUBLESHOOTING.md  INTEGRATION_TESTING.md  LLMManager_Documentation.md  MIGRATION_GUIDE.md  MODEL_NAME_RESOLUTION_GUIDE.md  MessageBuilder.md  ModelManager_Documentation.md  ParallelLLMManager_Documentation.md  ProjectStructure.md  README.md  RetryManager_Documentation.md  Supported Regions and models for inference profiles - Amazon Bedrock.htm  Supported foundation models in Amazon Bedrock - Amazon Bedrock.htm  TESTING.md  UnifiedModelManager_Documentation.md  UnifiedModels.json  Using the Converse API - Amazon Bedrock.htm  caching.md  forLLMConsumption - bestehorn_llmmanager.md  forLLMConsumption.md  lessons-learned.md  migration_guide_v3.md
examples/: README.md  caching_example.py  catalog_basic_usage.py  catalog_cache_modes.py  catalog_lambda_usage.py  lambda_complete_serverless_app.py  lambda_llm_manager_with_model_cache.py  lambda_unified_model_manager.py  log_level_example.py  region_discovery_example.py  streaming_example.py
notebooks/: AutoUpdatingLLMManager.ipynb  CRISManager.ipynb  Caching.ipynb  ExtendedContext_Demo.ipynb  HelloWorldLLMManager.ipynb  HelloWorld_LLMManager.ipynb  HelloWorld_MessageBuilder.ipynb  HelloWorld_MessageBuilder_Demo.ipynb  HelloWorld_MessageBuilder_Paths.ipynb  HelloWorld_Streaming_Demo.ipynb  InferenceProfile_Demo.ipynb  ModelIDManager.ipynb  MultimodalContentDemo.ipynb  NOTEBOOK_UPDATE_GUIDE.md  ParallelLLMManager_Demo.ipynb  README_NOTEBOOK_UPDATES.md  ResponseValidation.ipynb  TestAutoUpdate.ipynb  UnifiedModelManager.ipynb
prompts/: CRISParser.txt  CodingStandards.txt  FixTests.txt  FoundationalModelParser.txt  InitialPrompt.txt  PromptBuilder.txt  TestCoverage.txt
scripts/: demo_region_distribution.py  generate_bundled_data.py  github_wrapper.py  push_version.py  release_smoke_test.py  setup-hooks.sh  validate_package.py
src/: BedrockResponse.py  CRISProfileParser.py  ConverseFieldConstants.py  LLMManager.py  ModelIDParser.py  ParallelLLMManager.py  __init__.py
src/bedrock/: ModelManager.py  ParallelLLMManager.py  UnifiedModelManager.py
src/bestehorn_llmmanager/: __init__.py  _version.py  llm_manager.py  message_builder.py  message_builder_constants.py  message_builder_enums.py  parallel_llm_manager.py
src/content/: ContentBuilder.py  ContentItem.py  ContentTypes.py  __init__.py
test/: __init__.py  conftest.py  test_LLMManager.py  test_ParallelLLMManager.py  test_ci_pipeline.py  test_release_smoke.py
test/bedrock/: __init__.py  test_CRISManager.py  test_ParallelLLMManager.py  test_UnifiedModelManager.py  test_UnifiedModelManager_final.py
test/bestehorn_llmmanager/: __init__.py  conftest.py  test_LLMManager.py  test_LLMManager_boto3_config.py  test_ParallelLLMManager.py  test_ParallelLLMManager_boto3_config.py  test_deprecation_warning_count.py  test_init.py  test_llm_manager_model_specific_config.py  test_manager_region_distribution_options.py  test_message_builder.py  test_parallel_llm_manager_caching.py  test_parallel_llm_manager_model_specific_config.py  test_production_deprecation_warnings.py  test_reasoning_roundtrip.py  test_tool_use_roundtrip.py  (+1 more)
workspace/: unified_model_demo.py
(+350 files in other folders)
