[build-system]
requires = ["setuptools>=61.0,<83.0", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bestehorn-llmmanager"
dynamic = ["version"]
description = "A comprehensive Python library for managing AWS Bedrock Converse API interactions with multi-model support, intelligent retry logic, and parallel processing capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Markus Bestehorn", email = "markus.bestehorn@googlemail.com"}
]
maintainers = [
    {name = "Markus Bestehorn", email = "markus.bestehorn@googlemail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = ["aws", "bedrock", "llm", "ai", "machine-learning", "amazon", "claude", "anthropic"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/Bestehorn/LLMManager"
Documentation = "https://github.com/Bestehorn/LLMManager/blob/main/README.md"
Repository = "https://github.com/Bestehorn/LLMManager.git"
"Bug Tracker" = "https://github.com/Bestehorn/LLMManager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=3.2.0",
    "pytest-xdist>=3.3.1",
    "coverage>=7.3.0",
    "responses>=0.23.3",
    "freezegun>=1.2.2",
    "factory-boy>=3.3.0",
    "ipykernel>=6.25.0",
    "ruff>=0.9.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "hypothesis>=6.82.0",
    "boto3-stubs[bedrock-runtime]>=1.28.0",
    "PyYAML>=6.0.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bestehorn_llmmanager*"]

[tool.setuptools.package-data]
bestehorn_llmmanager = [
    "py.typed",
    "bedrock/package_data/bedrock_catalog_bundled.json"
]

[tool.setuptools_scm]
# Automatically determines version from git tags
write_to = "src/bestehorn_llmmanager/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

# Testing configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=bestehorn_llmmanager",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=80",
    "--html=test_results.html",
    "--self-contained-html",
    "-v",
    "--tb=short"
]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
    "aws: Tests requiring AWS access",
    "aws_integration: Tests requiring real AWS Bedrock API access",
    "aws_low_cost: Low-cost tests (< $0.01 estimated)",
    "aws_medium_cost: Medium-cost tests ($0.01 - $0.10 estimated)",
    "aws_high_cost: High-cost tests (> $0.10 estimated)",
    "aws_fast: Fast integration tests (< 30 seconds)",
    "aws_slow: Slow integration tests (> 30 seconds)",
    "aws_bedrock_runtime: Tests using Bedrock Runtime API",
    "aws_profile_auth: Tests requiring AWS CLI profile authentication",
    "aws_single_region: Tests operating in a single AWS region",
    "aws_multi_region: Tests operating across multiple AWS regions",
    "aws_anthropic_models: Tests using Anthropic models",
    "aws_amazon_models: Tests using Amazon models",
    "aws_streaming: Tests using streaming responses",
]
filterwarnings = [
    # Third-party deprecation warnings stay ignored (not actionable here).
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # The project's OWN deprecation warnings are promoted to errors so any NEW use of a
    # deprecated bestehorn_llmmanager API fails CI (issue #20). Tests that intentionally
    # exercise a deprecated surface must assert it via pytest.warns(...) or a scoped
    # @pytest.mark.filterwarnings, rather than letting the warning leak.
    "error::bestehorn_llmmanager.bedrock.models.deprecation.DeprecatedEnumValueWarning",
    "error::bestehorn_llmmanager.bedrock.models.deprecation.DeprecatedAPIWarning",
]
# Note: the project's own deprecation categories (DeprecatedEnumValueWarning,
# DeprecatedAPIWarning) are errors — see CONTRIBUTING.md. The legacy CRISManager/
# ModelManager/UnifiedModelManager classes emit a plain DeprecationWarning (still
# ignored above) since the whole class is deprecated until v4.0.0.

# ──────────────────────────────────────────────────────────────────────────────
# Ruff: replaces black (format) + isort (I) + flake8 (E/F/W) + bandit (S).
# Keep [tool.mypy] (type checking) and [tool.pytest.ini_options] (tests) as-is.
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
# Lowest supported interpreter; target-version drives syntax-aware behavior.
# (Ruff has no per-version list like black; pin to the minimum: py310.)
target-version = "py310"
# Generated version file must never be linted or formatted.
extend-exclude = ["src/bestehorn_llmmanager/_version.py"]

[tool.ruff.lint]
# E,F,W = pycodestyle + Pyflakes (the flake8 core); I = isort; S = flake8-bandit
# (replaces standalone bandit); B = flake8-bugbear (low-noise correctness upgrade).
select = ["E", "F", "W", "I", "S", "B"]
# E501 (line-too-long) is intentionally NOT enforced: the legacy flake8 config
# ignored it (tox.ini [flake8] ignore = E203, W503, E501) and `ruff format` already
# wraps everything it safely can. Long URLs/string-literals/comments are tolerated
# exactly as before. E203/W503 need no entry: W503 has no ruff code and E203 is an
# off-by-default preview rule (the formatter handles slice spacing).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use asserts (S101) and fixture "passwords"/tmp paths; pytest
# patterns (bare assert, assertRaises(Exception), try/except/pass in cleanup) are
# expected. These mirror what standalone bandit/flake8 never gated on test code.
"test/**" = [
    "S101", "S105", "S106", "S108", "S110", "S112", "S311",
    "B007", "B009", "B011", "B017", "B028", "B904", "B905",
    "E714",
]
# Helper CLI scripts deliberately shell out (S602: subprocess shell=True in the
# version/validate helpers) and open trusted GitHub API URLs (S310: urllib in the
# github wrapper). These are dev-only tooling, not library attack surface, and were
# only ever advisory under standalone bandit.
"scripts/**" = ["S310", "S602"]
# access_method_selector uses `assert X is not None` purely as mypy type-narrowing
# guards after a validated-state check (e.g. `if access_info.has_regional_cris:`); the
# invariant is guaranteed by ModelAccessInfo validation, so S101 does not apply here.
"src/bestehorn_llmmanager/bedrock/retry/access_method_selector.py" = ["S101"]

[tool.ruff.lint.isort]
# isort black-compatibility is automatic with ruff-format enabled; there is NO
# profile="black" key. These mirror the prior [tool.isort] intent.
known-first-party = ["bestehorn_llmmanager"]
combine-as-imports = true

[tool.ruff.format]
# Drop-in for black: line-length=100, double quotes, space indent (black defaults).
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Type checking with mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "bs4.*",
    "requests.*",
    "tenacity.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bestehorn_llmmanager.llm_manager"
# Suppress unreachable code warnings for defensive programming
# The validation methods have implicit returns that mypy thinks are unreachable
# but we keep them for robustness when Python's dynamic typing is considered
warn_unreachable = false

[[tool.mypy.overrides]]
module = "bestehorn_llmmanager.bedrock.parsers.cris_parser"
# Suppress unreachable code warnings for defensive programming
# Multiple early return guards are used for robustness in HTML parsing
warn_unreachable = false

[[tool.mypy.overrides]]
module = "bestehorn_llmmanager.bedrock.catalog.transformer"
# Suppress unreachable code warnings for defensive programming
# Loop iteration patterns trigger false positives in mypy's reachability analysis
warn_unreachable = false

[[tool.mypy.overrides]]
module = "bestehorn_llmmanager.bedrock.catalog.bedrock_catalog"
# Suppress unreachable code warnings for defensive programming
# Exception handling patterns trigger false positives in mypy's reachability analysis
warn_unreachable = false

[[tool.mypy.overrides]]
module = "bestehorn_llmmanager._version"
# Ignore generated version file
ignore_errors = true
